develop: 컨트롤러 테스트 추가, 코드 정리, PR을 위한 README 정리